# pasc

./: .gitignore  Readme.md
Labs/Hardware/Lab1/: E7020E.lib  Lab1-cache.lib  Lab1.bak  Lab1.kicad_pcb  Lab1.pro  Lab1.sch  _autosave-Lab1.kicad_pcb  fp-lib-table
Labs/Hardware/Lab2/: Lab2.net
Labs/Hardware/Lab2/Gerber/: Lab1-B.Cu.gbr  (+6 more)
Labs/Hardware/Libs/: E7020E.lib
Project/Design/: PASC_Sensors.xml  PASC_sensors.xml  PCB_revS  ProjectHigh.xml
Project/Design/temperature_sensor_sesign/: design_temp_sensor.m
Project/Hardware/CubeMX/: stmf32f411.ioc  stmf32f411_RevH.ioc
Project/Hardware/Schematic/: PASC.lib  PCB_Simon.kicad_pcb  PCB_Simon.kicad_pcb-bak  PCB_Simon.net  PCB_Simon_mount.kicad_pcb  accelerometer.sch  buttons.sch  display.bak  display.sch  display2.bak  display2.sch  e7020e.lib  lab-cache.lib  lab-rescue.lib  lab.bak  lab.kicad_pcb  lab.net  lab.pro  lab.sch  piezo.sch  pulsesensor.bak  pulsesensor.sch  sym-lib-table  tempsensor.bak  tempsensor.sch
Project/Hardware/Schematic_Ubuntu/: _autosave-lab.kicad_pcb  _saved_tempsensor.sch  accelerometer.sch  buttons.sch  display.sch  lab.csv  lab.kicad_pcb  lab.kicad_pcb-bak  lab.net  lab.pro  lab.sch  lab.xml  pcb.net  pcb_net1.net  pcb_rev1.net  pcb_rev2.kicad_pcb  pcb_rev2.kicad_pcb-bak  pcb_rev2.pro  pcb_rev3.kicad_pcb  pcb_rev3.kicad_pcb-bak  pcb_rev4.kicad_pcb  pcb_rev4.kicad_pcb-bak  pcb_rev4.pro  piezo.sch  pulsesensor.sch  sym-lib-table  tempsensor.sch
Project/Hardware/Schematic_ons/: PCB_Simon_mount.net  PCB_Simon_mount_rev2-cache.lib  PCB_Simon_mount_rev2-rescue.lib  PCB_Simon_mount_rev2.bak  PCB_Simon_mount_rev2.kicad_pcb  PCB_Simon_mount_rev2.kicad_pcb-bak  PCB_Simon_mount_rev2.net  PCB_Simon_mount_rev2.sch  accelerometer.bak  accelerometer.sch  buttons.bak  buttons.sch  display.bak  display.sch  fp-lib-table  piezo.bak  piezo.sch  pulsesensor.bak  pulsesensor.sch  sym-lib-table  tempsensor.sch
Project/Software/: Cargo.toml  Readme.md  main.rs  memory.x  openocd.gdb  stlink.cfg  stm32f4x.cfg
Project/Software/.cargo/: config
Project/Software/src/: adc.rs  button.rs  channel.rs  countdowntimer.rs  demo.rs  dma.rs  filter.rs  font.rs  frequency.rs  heart.rs  i2c.rs  lcd.rs  lis3dh.rs  main.rs  pcd8544.rs  pcd8544_gpio.rs  pcd8544_spi.rs  pedometer.rs  pulsemeter.rs  pwm.rs  rip.rs  spi.rs  step.rs  temp.rs  temperature.rs  time.rs
(+47 files in other folders)
