[package]
name = "Software"
version = "0.1.0"
authors = ["sheepwall <a.sve@live.se>", "henthe-5 <henthe-5@student.ltu.se"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"

# panic-abort = "0.3.1" # requires nightly toolchain
panic-halt = "0.2.0"
panic-semihosting = "0.5.1"
panic-itm = "0.4.0"

bare-metal = "0.2.4"
nb = "0.1.1"
fpa = "0.1.0"

heapless = "0.4.1"
static-ref = "0.2.1"

[dependencies.cortex-m]
version = "0.5.8"

[dependencies.cortex-m-rtfm]
version = "0.4.2"
features = ["timer-queue"]

[dependencies.pcd8544-hal]
git = "https://github.com/dancek/pcd8544-hal.git"
version = "0.1.0"

[dependencies.stm32f4]
version = "0.6.0"

[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
version = "0.3.0"
features = ["stm32f413", "rt"] # 413 is less buggy than 411.

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]

[dependencies.cast]
default-features = false
version = "0.2.2"

[[bin]]
name = "Software"
